Fix for https://www.apptrajectory.com/rcode/staffplan/stories/136590, make client/project names both visible but adjust the overall width so it fits on an iPad.

--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -162,8 +162,11 @@ section.main
       min-height: 400px
 
   .client-name
-    display: inline-block !important
-
+    width: 180px !important
+  
+  .project-name
+    width: 150px !important
+    
   .date-pagination
     left: 414px !important
 
